# B-L072Z-LRWAN-meson-example

./: .gdbinit  README.md  cross_file.build  main.c  meson.build
STM32-third/: meson.build
STM32-third/LoRa/: meson.build
lib/: meson.build
lib/LoRa/: meson.build
lib/LoRa/Inc/: debug.h  hw.h  hw_conf.h  hw_gpio.h  hw_msp.h  hw_rtc.h  hw_spi.h  vcom.h
lib/LoRa/Src/: hw_gpio.c  hw_rtc.c  hw_spi.c
