# Sources

# internal incdirs and srcsfiles
incdirs += include_directories([  'Core/',
                                  'Crypto/',
                                  'Mac/',
                                  'Phy/',
                                  'Utilities/',
                                  ])
srcs    += files([
                  'Core/lora.c',
                  'Crypto/aes.c',
                  'Crypto/cmac.c',

                  'Mac/region/Region.c',
                  'Mac/region/RegionAS923.c',
                  'Mac/region/RegionAU915.c',
                  'Mac/region/RegionCN470.c',
                  'Mac/region/RegionCN779.c',
                  'Mac/region/RegionCommon.c',
                  'Mac/region/RegionEU433.c',
                  'Mac/region/RegionEU868.c',
                  'Mac/region/RegionIN865.c',
                  'Mac/region/RegionKR920.c',
                  'Mac/region/RegionUS915-Hybrid.c',
                  'Mac/region/RegionUS915.c',

                  'Mac/LoRaMac.c',
                  'Mac/LoRaMacCrypto.c',

                  'Utilities/delay.c',
                  'Utilities/low_power.c',
                  'Utilities/timeServer.c',
                  'Utilities/utilities.c',
                  ])
