# Sources

# http://stackforce.github.io/LoRaMac-doc/

# internal incdirs and srcsfiles
incdirs += include_directories([  'Inc/',
                                  '.'
                                  ])
srcs    += files([
                  'Src/hw_gpio.c',
                  'Src/hw_rtc.c',
                  'Src/hw_spi.c',
                  ])
